# Testora

./: .gitignore  LICENSE  README.md  bugsInPy_candidates.csv  logs_2024-05-02T14:35:23.906340.json  logs_2024-05-03T08:30:27.044247.json  out  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  postCreateCommands.sh  scipy_testcontainer  setup_keras.sh  setup_marshmallow.sh  setup_numpy.sh  setup_numpy_to_run_in_container.sh  setup_pandas.sh  setup_pytorch_geometric.sh  setup_scapy.sh  setup_scikit-learn.sh  setup_scipy.sh  setup_scipy_to_run_in_container.sh  setup_transformers.sh
data/: DATA.md  bugsInPy_auto_selected_April_11_2024.csv  bugsInPy_bugs_shuffled_March_14_2024.csv  bugsInPy_manually_selected_target_bugs.csv  bugsInPy_single_function_bugs_shuffled_April_12_2024.csv  defects4j_bugs_shuffled_March_7_2024.csv  defects4j_bugs_shuffled_March_7_2024_subset10.csv  defects4j_bugs_shuffled_March_7_2024_subset2.csv
data/counterfeit_programs/algorithmic_errors/: multiply.py  multiply.txt  sort_numbers.txt
data/example_prompts/: intended1.txt  intended2.txt  intended3.txt  surprising1.txt  surprising2.txt
data/ground_truth/: template.json
data/target_prs/: keras.json  marshmallow.json  pandas.json  scipy.json
src/buggpt/: Config.py  Constants.py  LLMCacheAnalyzer.py  Main.py  RegressionFinder.py  TestRemoveMe.py
src/buggpt/llms/: LLMCache.py  (+2 more)
src/multilspy/: README.md  language_server.py
src/testora/: BugDetector.py  Config.py  LLMCacheAnalyzer.py  Main.py  RegressionFinder.py
templates/: index.html  pr.html  pr_log.html  pr_result.html
(+165 files in other folders)
