[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buggpt"
version = "0.1.0"
description = ""
authors = [
    { name = "Michael Pradel", email = "michael@binaervarianz.de" }
]
license = "MIT"
dependencies = [
    "openai",
    "unidiff",
    "libcst",
    "docker"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/buggpt",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
